<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tracking">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="#CDEFF0F6"
        app:cardCornerRadius="1dp"
        app:contentPadding="10dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/Activity"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginEnd="40dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/Location"
            android:textSize="24sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="clip_vertical|left"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="@dimen/cardview_default_elevation"
            app:contentPadding="5dp">

            <TextView
                android:id="@+id/activityTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:layout_margin="5dp"

                android:fontFamily="sans-serif-black"
                android:text="@string/time_to_start"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:text="running" />

            <ImageView
                android:id="@+id/activityImage"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_gravity="left"
                android:layout_marginTop="40dp"
                android:adjustViewBounds="false"
                android:cropToPadding="true"
                android:elevation="@dimen/cardview_default_radius"
                android:scaleType="fitXY"
                android:src="@drawable/time_to_start" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="40dp"
            android:layout_marginRight="20dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="@dimen/cardview_default_elevation"
            app:contentPadding="5dp">

            <TextView
                android:id="@+id/geoTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:layout_margin="5dp"

                android:fontFamily="sans-serif-black"
                android:text="@string/time_to_start"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:text="running" />

            <ImageView
                android:id="@+id/geoImage"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_gravity="right"
                android:layout_marginTop="40dp"
                android:elevation="@dimen/cardview_default_radius"
                android:scaleType="fitXY"
                android:src="@drawable/time_to_start" />
        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="355dp"
        android:layout_marginRight="10dp"
        android:elevation="@dimen/cardview_default_elevation"
        android:padding="10dp"
        app:cardBackgroundColor="#DAF0EAF1"
        app:cardCornerRadius="1dp">

        <lecho.lib.hellocharts.view.LineChartView
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_gravity="right"
            android:paddingRight="30dp"
            android:visibility="visible" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/startBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="300dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_button"
        android:text="@string/start_tracking"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/resetBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="600dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_button"
        android:text="@string/reset_tracking"
        android:textColor="@android:color/white"
        android:visibility="gone"
        tools:visibility="visible" />

    <Button
        android:id="@+id/stopBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_button"
        android:text="@string/stop_tracking"
        android:textColor="@android:color/white" />


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_gravity="bottom"
        android:visibility="visible"
        app:itemBackground="@color/white"
        app:itemIconTint="@drawable/bottom_nav_bar"
        app:itemTextColor="@drawable/bottom_nav_bar"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/my_menu">

    </com.google.android.material.bottomnavigation.BottomNavigationView>

</FrameLayout>